Remove deprecated API uses.